cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)
project (umicache)

add_executable(umicache 
				umicache.cpp
				umicache_exception.cpp
				umicache_cache.cpp
				umicache_command.cpp
				umicache_config.cpp
				redis/umicache_command_redis.cpp
				redis/umicache_config_redis.cpp
				redis/umicache_type_redis.cpp
				redis/commands/umicache_command_append.cpp
				redis/commands/umicache_command_auth.cpp
				redis/commands/umicache_command_bgrewriteaof.cpp
				redis/commands/umicache_command_bgsave.cpp
				redis/commands/umicache_command_bitcount.cpp
				redis/commands/umicache_command_bitop.cpp
				redis/commands/umicache_command_bitpos.cpp
				redis/commands/umicache_command_blpop.cpp
				redis/commands/umicache_command_brpop.cpp
				redis/commands/umicache_command_brpoplpush.cpp
				redis/commands/umicache_command_client_kill.cpp
				redis/commands/umicache_command_client_list.cpp
				redis/commands/umicache_command_client_getname.cpp
				redis/commands/umicache_command_client_pause.cpp
				redis/commands/umicache_command_client_setname.cpp
				redis/commands/umicache_command_cluster_addslots.cpp
				redis/commands/umicache_command_cluster_count_failure_reports.cpp
				redis/commands/umicache_command_cluster_countkeysinslot.cpp
				redis/commands/umicache_command_cluster_delslots.cpp
				redis/commands/umicache_command_cluster_failover.cpp
				redis/commands/umicache_command_cluster_forget.cpp
				redis/commands/umicache_command_cluster_getkeysinslot.cpp
				redis/commands/umicache_command_cluster_info.cpp
				redis/commands/umicache_command_cluster_keyslot.cpp
				redis/commands/umicache_command_cluster_meet.cpp
				redis/commands/umicache_command_cluster_nodes.cpp
				redis/commands/umicache_command_cluster_replicate.cpp
				redis/commands/umicache_command_cluster_reset.cpp
				redis/commands/umicache_command_cluster_saveconfig.cpp
				redis/commands/umicache_command_cluster_setconfigepoch.cpp
				redis/commands/umicache_command_cluster_setslot.cpp
				redis/commands/umicache_command_cluster_slaves.cpp
				redis/commands/umicache_command_cluster_slots.cpp
				redis/commands/umicache_command_command.cpp
				redis/commands/umicache_command_command_count.cpp
				redis/commands/umicache_command_command_getkeys.cpp
				redis/commands/umicache_command_command_info.cpp
				redis/commands/umicache_command_config_get.cpp
				redis/commands/umicache_command_config_rewrite.cpp
				redis/commands/umicache_command_config_set.cpp
				redis/commands/umicache_command_config_resetstat.cpp
				redis/commands/umicache_command_dbsize.cpp
				redis/commands/umicache_command_debug_object.cpp
				redis/commands/umicache_command_debug_segfault.cpp
				redis/commands/umicache_command_decr.cpp
				redis/commands/umicache_command_decrby.cpp
				redis/commands/umicache_command_del.cpp
				redis/commands/umicache_command_discard.cpp
				redis/commands/umicache_command_dump.cpp
				redis/commands/umicache_command_echo.cpp
				redis/commands/umicache_command_eval.cpp
				redis/commands/umicache_command_evalsha.cpp
				redis/commands/umicache_command_exec.cpp
				redis/commands/umicache_command_exists.cpp
				redis/commands/umicache_command_expire.cpp
				redis/commands/umicache_command_expireat.cpp
				redis/commands/umicache_command_flushall.cpp
				redis/commands/umicache_command_flushdb.cpp
				redis/commands/umicache_command_geoadd.cpp
				redis/commands/umicache_command_geohash.cpp
				redis/commands/umicache_command_geopos.cpp
				redis/commands/umicache_command_geodist.cpp
				redis/commands/umicache_command_georadius.cpp
				redis/commands/umicache_command_georadiusbymember.cpp
				redis/commands/umicache_command_get.cpp
				redis/commands/umicache_command_getbit.cpp
				redis/commands/umicache_command_getrange.cpp
				redis/commands/umicache_command_getset.cpp
				main.cpp
				redis/commands/umicache_command_hdel.cpp
				redis/commands/umicache_command_hdel.hpp
				redis/commands/umicache_command_hexists.cpp
				redis/commands/umicache_command_hexists.hpp
				redis/commands/umicache_command_hget.cpp
				redis/commands/umicache_command_hget.hpp
				redis/commands/umicache_command_hgetall.cpp
				redis/commands/umicache_command_hgetall.hpp
				redis/commands/umicache_command_hincrby.cpp
				redis/commands/umicache_command_hincrby.hpp
				redis/commands/umicache_command_hincrbyfloat.cpp
				redis/commands/umicache_command_hincrbyfloat.hpp
				redis/commands/umicache_command_hkeys.cpp
				redis/commands/umicache_command_hkeys.hpp
				redis/commands/umicache_command_hlen.cpp
				redis/commands/umicache_command_hlen.hpp
				redis/commands/umicache_command_hmget.cpp
				redis/commands/umicache_command_hmget.hpp
				redis/commands/umicache_command_hmset.cpp
				redis/commands/umicache_command_hmset.hpp
				redis/commands/umicache_command_hset.cpp
				redis/commands/umicache_command_hset.hpp
				redis/commands/umicache_command_hsetnx.cpp
				redis/commands/umicache_command_hsetnx.hpp
				redis/commands/umicache_command_hstrlen.cpp
				redis/commands/umicache_command_hstrlen.hpp
				redis/commands/umicache_command_hvals.cpp
				redis/commands/umicache_command_hvals.hpp
				redis/commands/umicache_command_incr.cpp
				redis/commands/umicache_command_incr.hpp
				redis/commands/umicache_command_incrby.cpp
				redis/commands/umicache_command_incrby.hpp
				redis/commands/umicache_command_incrbyfloat.cpp
				redis/commands/umicache_command_incrbyfloat.hpp
				redis/commands/umicache_command_info.cpp
				redis/commands/umicache_command_info.hpp)

set_property(TARGET umicache PROPERTY CXX_STANDARD 14)
set_property(TARGET umicache PROPERTY CXX_STANDARD_REQUIRED ON)
