cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project(umicache)

add_executable(umicache
        umicache.cpp
        umicache_exception.cpp
        umicache_cache.cpp
        umicache_command.cpp
        umicache_config.cpp
        redis/umicache_command_redis.cpp
        redis/umicache_config_redis.cpp
        redis/umicache_type_redis.cpp
        redis/commands/umicache_command_append.cpp
        redis/commands/umicache_command_auth.cpp
        redis/commands/umicache_command_bgrewriteaof.cpp
        redis/commands/umicache_command_bgsave.cpp
        redis/commands/umicache_command_bitcount.cpp
        redis/commands/umicache_command_bitop.cpp
        redis/commands/umicache_command_bitpos.cpp
        redis/commands/umicache_command_blpop.cpp
        redis/commands/umicache_command_brpop.cpp
        redis/commands/umicache_command_brpoplpush.cpp
        redis/commands/umicache_command_client_kill.cpp
        redis/commands/umicache_command_client_list.cpp
        redis/commands/umicache_command_client_getname.cpp
        redis/commands/umicache_command_client_pause.cpp
        redis/commands/umicache_command_client_setname.cpp
        redis/commands/umicache_command_cluster_addslots.cpp
        redis/commands/umicache_command_cluster_count_failure_reports.cpp
        redis/commands/umicache_command_cluster_countkeysinslot.cpp
        redis/commands/umicache_command_cluster_delslots.cpp
        redis/commands/umicache_command_cluster_failover.cpp
        redis/commands/umicache_command_cluster_forget.cpp
        redis/commands/umicache_command_cluster_getkeysinslot.cpp
        redis/commands/umicache_command_cluster_info.cpp
        redis/commands/umicache_command_cluster_keyslot.cpp
        redis/commands/umicache_command_cluster_meet.cpp
        redis/commands/umicache_command_cluster_nodes.cpp
        redis/commands/umicache_command_cluster_replicate.cpp
        redis/commands/umicache_command_cluster_reset.cpp
        redis/commands/umicache_command_cluster_saveconfig.cpp
        redis/commands/umicache_command_cluster_setconfigepoch.cpp
        redis/commands/umicache_command_cluster_setslot.cpp
        redis/commands/umicache_command_cluster_slaves.cpp
        redis/commands/umicache_command_cluster_slots.cpp
        redis/commands/umicache_command_command.cpp
        redis/commands/umicache_command_command_count.cpp
        redis/commands/umicache_command_command_getkeys.cpp
        redis/commands/umicache_command_command_info.cpp
        redis/commands/umicache_command_config_get.cpp
        redis/commands/umicache_command_config_rewrite.cpp
        redis/commands/umicache_command_config_set.cpp
        redis/commands/umicache_command_config_resetstat.cpp
        redis/commands/umicache_command_dbsize.cpp
        redis/commands/umicache_command_debug_object.cpp
        redis/commands/umicache_command_debug_segfault.cpp
        redis/commands/umicache_command_decr.cpp
        redis/commands/umicache_command_decrby.cpp
        redis/commands/umicache_command_del.cpp
        redis/commands/umicache_command_discard.cpp
        redis/commands/umicache_command_dump.cpp
        redis/commands/umicache_command_echo.cpp
        redis/commands/umicache_command_eval.cpp
        redis/commands/umicache_command_evalsha.cpp
        redis/commands/umicache_command_exec.cpp
        redis/commands/umicache_command_exists.cpp
        redis/commands/umicache_command_expire.cpp
        redis/commands/umicache_command_expireat.cpp
        redis/commands/umicache_command_flushall.cpp
        redis/commands/umicache_command_flushdb.cpp
        redis/commands/umicache_command_geoadd.cpp
        redis/commands/umicache_command_geohash.cpp
        redis/commands/umicache_command_geopos.cpp
        redis/commands/umicache_command_geodist.cpp
        redis/commands/umicache_command_georadius.cpp
        redis/commands/umicache_command_georadiusbymember.cpp
        redis/commands/umicache_command_get.cpp
        redis/commands/umicache_command_getbit.cpp
        redis/commands/umicache_command_getrange.cpp
        redis/commands/umicache_command_getset.cpp
        main.cpp
        redis/commands/umicache_command_hdel.cpp
        redis/commands/umicache_command_hdel.hpp
        redis/commands/umicache_command_hexists.cpp
        redis/commands/umicache_command_hexists.hpp
        redis/commands/umicache_command_hget.cpp
        redis/commands/umicache_command_hget.hpp
        redis/commands/umicache_command_hgetall.cpp
        redis/commands/umicache_command_hgetall.hpp
        redis/commands/umicache_command_hincrby.cpp
        redis/commands/umicache_command_hincrby.hpp
        redis/commands/umicache_command_hincrbyfloat.cpp
        redis/commands/umicache_command_hincrbyfloat.hpp
        redis/commands/umicache_command_hkeys.cpp
        redis/commands/umicache_command_hkeys.hpp
        redis/commands/umicache_command_hlen.cpp
        redis/commands/umicache_command_hlen.hpp
        redis/commands/umicache_command_hmget.cpp
        redis/commands/umicache_command_hmget.hpp
        redis/commands/umicache_command_hmset.cpp
        redis/commands/umicache_command_hmset.hpp
        redis/commands/umicache_command_hset.cpp
        redis/commands/umicache_command_hset.hpp
        redis/commands/umicache_command_hsetnx.cpp
        redis/commands/umicache_command_hsetnx.hpp
        redis/commands/umicache_command_hstrlen.cpp
        redis/commands/umicache_command_hstrlen.hpp
        redis/commands/umicache_command_hvals.cpp
        redis/commands/umicache_command_hvals.hpp
        redis/commands/umicache_command_incr.cpp
        redis/commands/umicache_command_incr.hpp
        redis/commands/umicache_command_incrby.cpp
        redis/commands/umicache_command_incrby.hpp
        redis/commands/umicache_command_incrbyfloat.cpp
        redis/commands/umicache_command_incrbyfloat.hpp
        redis/commands/umicache_command_info.cpp
        redis/commands/umicache_command_info.hpp
        redis/commands/umicache_command_keys.cpp
        redis/commands/umicache_command_keys.hpp
        redis/commands/umicache_command_lastsave.cpp
        redis/commands/umicache_command_lastsave.hpp
        redis/commands/umicache_command_lindex.cpp
        redis/commands/umicache_command_lindex.hpp
        redis/commands/umicache_command_linsert.cpp
        redis/commands/umicache_command_linsert.hpp
        redis/commands/umicache_command_llen.cpp
        redis/commands/umicache_command_llen.hpp
        redis/commands/umicache_command_lpop.cpp
        redis/commands/umicache_command_lpop.hpp
        redis/commands/umicache_command_lpush.cpp
        redis/commands/umicache_command_lpush.hpp
        redis/commands/umicache_command_lpushx.cpp
        redis/commands/umicache_command_lpushx.hpp
        redis/commands/umicache_command_lrange.cpp
        redis/commands/umicache_command_lrange.hpp
        redis/commands/umicache_command_lrem.cpp
        redis/commands/umicache_command_lrem.hpp
        redis/commands/umicache_command_lset.cpp
        redis/commands/umicache_command_lset.hpp
        redis/commands/umicache_command_ltrim.cpp
        redis/commands/umicache_command_ltrim.hpp
        redis/commands/umicache_command_mget.cpp
        redis/commands/umicache_command_mget.hpp
        redis/commands/umicache_command_migrate.cpp
        redis/commands/umicache_command_migrate.hpp
        redis/commands/umicache_command_monitor.cpp
        redis/commands/umicache_command_monitor.hpp
        redis/commands/umicache_command_move.cpp
        redis/commands/umicache_command_move.hpp
        redis/commands/umicache_command_mset.cpp
        redis/commands/umicache_command_mset.hpp
        redis/commands/umicache_command_msetnx.cpp
        redis/commands/umicache_command_msetnx.hpp
        redis/commands/umicache_command_multi.cpp
        redis/commands/umicache_command_multi.hpp
        redis/commands/umicache_command_object.cpp
        redis/commands/umicache_command_object.hpp
        redis/commands/umicache_command_persist.cpp
        redis/commands/umicache_command_persist.hpp
        redis/commands/umicache_command_pexpire.cpp
        redis/commands/umicache_command_pexpire.hpp
        redis/commands/umicache_command_pexpireat.cpp
        redis/commands/umicache_command_pexpireat.hpp
        redis/commands/umicache_command_pfadd.cpp
        redis/commands/umicache_command_pfadd.hpp
        redis/commands/umicache_command_pfcount.cpp
        redis/commands/umicache_command_pfcount.hpp
        redis/commands/umicache_command_pfmerge.cpp
        redis/commands/umicache_command_pfmerge.hpp
        redis/commands/umicache_command_ping.cpp
        redis/commands/umicache_command_ping.hpp
        redis/commands/umicache_command_psetex.cpp
        redis/commands/umicache_command_psetex.hpp
        redis/commands/umicache_command_psubscribe.cpp
        redis/commands/umicache_command_psubscribe.hpp
        redis/commands/umicache_command_pubsub.cpp
        redis/commands/umicache_command_pubsub.hpp
        redis/commands/umicache_command_pttl.cpp
        redis/commands/umicache_command_pttl.hpp
        redis/commands/umicache_command_publish.cpp
        redis/commands/umicache_command_publish.hpp
        redis/commands/umicache_command_punsubscribe.cpp
        redis/commands/umicache_command_punsubscribe.hpp)

set_property(TARGET umicache PROPERTY CXX_STANDARD 14)
set_property(TARGET umicache PROPERTY CXX_STANDARD_REQUIRED ON)
